--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>GIthub Pages</h1>
+    <h1>Success</h1>
     <p>I'm hosted with GitHub Pages.</p>
   </body>
 </html>
