--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My first p5.js webpage</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>P5.js Example 1 - static drawing</h1>
+    <p>
+     This is my first attempt at a webapp using the p5.js library
+    </p>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
+  <script src="draw.js"></script>
 </html>
