--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My first p5.js webpage</title>
+    <title>Bouncing Ball</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
